[package]
name = "pgcp"
version = "0.1.0"
edition = "2021"
authors = ["mpw <x@mpw.sh>"]

[dependencies]
anyhow = "1.0.72"
env_logger = "0.10.0"
log = "0.4.19"
structopt = "0.3.26"
tokio = { version = "1.29.1", features = ["full"] }
tokio-postgres = { version = "0.7.8", features= ["with-uuid-1", "with-chrono-0_4"] }
uuid = { version = "1.3.1" , features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
